v1.6/assembly/intro/faq.md
---
title: "Frequently Asked Questions"
slug: "faq"
---

* toc
{:toc}

# Is FarmBot weatherproof/rainproof?

Yes. All electronics are protected from rain with plastic housings and enclosures. All other parts are made from corrosion resistant materials such as aluminum, stainless steel, and UV stabilized plastic.

Please note that FarmBot is not waterproof, in the sense that you cannot fully submerge it underwater, like in an aquarium. Ultra humid areas may pose a risk for FarmBot's electronics as well, requiring you to take extra precautions and measures during your installation.

# Can FarmBot service multiple beds?

No, not really.

Manually moving FarmBot from one bed to another bed would require partial disassembly, reconnecting the power and water lines, and also a re-calibration. Doing that every day or even once a week would be a lot of work.

Devising a hardware system so that FarmBot can automatically move from one bed to another is not a good idea either. In order for FarmBot to work it must be precisely attached to a single raised bed and tethered to a water and power source. Having extra mechanical systems to move the entire FarmBot (including the tracks, toolbays, and water/power tethers) from one bed to another would require significant extra hardware and be very expensive when compared to simply making your tracks longer to cover more area.

Having a FarmBot fixed in place and moving multiple beds underneath it would also require significant extra hardware and be very difficult. A full raised bed with soil and plants is extremely heavy, which would require powerful battery-operated motors. Or, you could move the beds by hand every day or week - but that's not very automated!

Furthermore, our software does not support multiple beds.

**If you are interested in having a single FarmBot cover more area and tend to more plants, the best way to accomplish this is to make the tracks longer and/or the gantry wider, and your single bed larger.**

Please do not ask us if we can help you make your FarmBot service multiple beds. We do not think this is a smart idea from a hardware cost efficiency standpoint, and it would require significant engineering resources to accomplish. Simply making the tracks longer and/or gantry wider is a much better solution to covering more area with a single FarmBot. That being said, you are welcome to build your own prototype and modify our software to try to make this work if you really want to.

# FarmBot is open-source, so how is it also for sale?

Being open-source means that all of the source files (CAD models, step-by-step assembly instructions, software, etc) are completely free so you can build and operate a FarmBot on your own – without our company. You can see and download all of these resources on our documentation hub.

At the same time, being open-source also allows anyone to sell a compiled version of FarmBot such as a complete kit or hosted software.

In fact, this is really important to do because it gives people options. The truth is that it is a lot of work to purchase all of the components from around the Internet yourself, and there wouldn’t be any guarantee that they work with each other. Its also technically challenging to host and maintain the web app software on your own server.

Whereas if you buy a kit, you’ll save a lot of time and get a complete product that is guaranteed to work and backed by our company. Then you get to play with designing new tools and figuring out new ways of using FarmBot, rather than struggling just to get it to work.

Long story short, being open-source and also for sale are not mutually exclusive.

# Can I extend the tracks or make the gantry wider/taller?

Yes, and we encourage this! While the current kits are designed to be a certain size, there is no reason why you cannot (with additional hardware) make your gantry taller or wider, and your tracks longer. However, such work will require R&D effort on your part, and is not guaranteed to work. Furthermore, at this time we do not offer the parts that you may need to pull this off, so you gotta be ready for some DIY action if you want to do this. Good luck!

# What is the size and weight of the FarmBot kit boxes?

FarmBot Genesis kits are shipped in two boxes. The **Extrusions and Leadscrew Kit** is a longer, skinnier box and contains all of the aluminum extrusions and the leadscrew. The **Main Carton** contains all of the other components including the electronics, hardware, plates, plastic pieces, cables, and more.

|<i></i>        |Main Carton|Extrusion and Leadscrew Kit|
|---------------|-----------|----------------------------|
|Genesis        |23cm x 43cm x 80cm (9 in x 17in x 31in)<br><br>19kg (42lbs)|13cm x 13cm x 154cm (5in x 5in x 61in)<br><br>10.3kg (22lbs, 11oz)
|Genesis <span class="fb-xl-sticker">XL</span>     |23cm x 43cm x 90cm (9 in x 17in x 35in)<br><br>23.6kg (52lbs 2oz)|13cm x 15cm x 154cm (5in x 6in x 61in)<br><br>16.6kg (36lbs, 10oz)

View our full shipping policy [here](http://shipping.farm.bot).
