v1.8/assembly/intro/faq.md
---
title: "Frequently Asked Questions"
slug: "faq"
---

# Is FarmBot weatherproof/rainproof?

{%
include callout.html
type="success"
title="Yes"
content="Just don't submerge it."
%}

All electronics are protected from rain with plastic housings and enclosures. All other parts are made from corrosion resistant materials such as aluminum, stainless steel, and UV stabilized plastic.

Please note that FarmBot is not waterproof, in the sense that you cannot fully submerge it underwater, like in an aquarium. Ultra humid areas may pose a risk for FarmBot's electronics as well, requiring you to take extra precautions and measures during your installation.

# Can FarmBot service multiple beds?

{%
include callout.html
type="danger"
title="No"
content="At least not without extreme modification to hardware and software."
%}

Manually moving FarmBot from one bed to another bed would require partial disassembly, reconnecting the power and water lines, and also a re-calibration. Doing that every day or even once a week would be a lot of work.

Devising a hardware system so that FarmBot can automatically move from one bed to another is not a good idea either. In order for FarmBot to work it must be precisely attached to a single raised bed and tethered to a water and power source. Having extra mechanical systems to move the entire FarmBot (including the tracks, toolbays, and water/power tethers) from one bed to another would require significant extra hardware and be very expensive when compared to simply making your tracks longer to cover more area.

Having a FarmBot fixed in place and moving multiple beds underneath it would also require significant extra hardware and be very difficult. A full raised bed with soil and plants is extremely heavy, which would require powerful battery-operated motors. Or, you could move the beds by hand every day or week - but that's not very automated!

Furthermore, our software does not support multiple beds.

**If you are interested in having a single FarmBot cover more area and tend to more plants, the best way to accomplish this is to make the tracks longer and/or the gantry wider, and your single bed larger.**

Please do not ask us if we can help you make your FarmBot service multiple beds. We do not think this is a smart idea from a hardware cost efficiency standpoint, and it would require significant engineering resources to accomplish. Simply making the tracks longer and/or gantry wider is a much better solution to covering more area with a single FarmBot. That being said, you are welcome to build your own prototype and modify our software to try to make this work if you really want to.

# FarmBot is open-source, so how is it also for sale?

{%
include callout.html
type="info"
title="TL;DR"
content="Being open-source and also for sale are not mutually exclusive."
%}

Being open-source means that all of the source files (CAD models, step-by-step assembly instructions, software, etc) are completely free so you can build and operate a FarmBot on your own – without our company. You can see and download all of these resources on our documentation hub.

At the same time, being open-source also allows anyone to sell a compiled version of FarmBot such as a complete kit or hosted software.

In fact, this is really important to do because it gives people options. The truth is that it is a lot of work to purchase all of the components from around the Internet yourself, and there wouldn’t be any guarantee that they work with each other. Its also technically challenging to host and maintain the web app software on your own server.

Whereas if you buy a kit, you’ll save a lot of time and get a complete product that is guaranteed to work and backed by our company. Then you get to play with designing new tools and figuring out new ways of using FarmBot, rather than struggling just to get it to work.

# Can I extend the tracks or make the gantry wider/taller?

{%
include callout.html
type="success"
title="Yes"
content="Though this will require your own additional hardware and effort, and mileage may vary."
%}

While the current kits are designed to be a certain size, there is no reason why you cannot (with additional hardware) make your gantry taller or wider, and your tracks longer. However, such work will require R&D effort on your part, and is not guaranteed to work. Furthermore, at this time we do not offer the parts that you may need to pull this off, so you gotta be ready for some DIY action if you want to do this. Good luck!

# Can I shorten the tracks or make the gantry narrower/shorter?

{%
include callout.html
type="success"
title="Yes"
content="Yes, please see the [scaling down](../../assembly/supporting-infrastructure.md#scaling-down) section on the supporting infrastructure page."
%}

# What is the size and weight of the FarmBot shipping box?

FarmBot Genesis kits are shipped in one box containing all of the track extrusions, gantry main beams, pre-assemblies, and other parts such as screws, the power supply, and more.

|FarmBot      |Dimensions                                |Weight          |
|-------------|------------------------------------------|----------------|
|Genesis      |23cm x 42cm x 106cm<br><i>9 in x 17in x 42in</i> |19.5kg<br><i>43lbs</i>
|Genesis (XL) |23cm x 42cm x 106cm<br><i>9 in x 17in x 42in</i> |24.0kg<br><i>53lbs</i>

{%
include callout.html
type="truck"
title="All kits ship free worldwide"
content="International customers outside of the USA are responsible for any import taxes, customs tariffs, value added taxes, and/or fees. View our full [shipping policy](http://shipping.farm.bot) for additional details."
%}
